# recipe-app-api

./: Dockerfile  Makefile  docker-compose-deploy.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: checks.yml
app/app/: asgi.py  settings.py  test.py  urls.py  wsgi.py
app/core/: admin.py  models.py  views.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_tag_recipe_tags.py  0004_ingredient_recipe_ingredients.py  0005_recipe_image.py
app/core/tests/: test_admin.py  test_commands.py  test_health_check.py  test_models.py
app/recipe/: serializers.py  urls.py  views.py
app/recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
nginx/: Dockerfile
